<resources>
    <string name="app_name">FarmChat</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="search">Search:</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu">Menu</string>
    <string name="friends">Friends</string>
    <string name="users">Users</string>
    <string name="group_chat">Group Chat</string>
    <string name="content_description">ImageView</string>
    <string name="send">Send</string>
    <string name="clear">CLEAR</string>
    <string name="enter_message">Enter Message:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="message">Message:</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="save">save</string>
    <string name="confirm_email">Confirm email</string>
    <string name="new_email">New Email</string>
    <string name="your_email">Your email</string>
    <string name="email_change">Email Change</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="your_password">Your password</string>
    <string name="password_change">Password Change</string>
    <string name="about_us_text">\nΗ εφαρμογή αυτή αναπτύχθηκε στο τμήμα Μηχανικών Πληροφορικής του ΤΕΙ Σερρών στα πλαίσια του εργαστηρίου Τεχνολογίας Λογισμικού από τους σπουδαστές Κόκαϊ Κατερίνα, Πρέλλιος Θέμης, Τσιμέττας Μιχάλης και Χαλιάσος Κωνσταντίνος υπό την επίβλεψη του καθηγητή Λάντζου Θεόδωρου.</string>
    <string name="appname">FarmChat</string>
    <string name="user_offline">User is offline</string>
    <string name="user_online">User is Online</string>
    <string name="add_friend">Add Friend</string>
    <string name="send_message">Send Message</string>
    <string name="search_howto">Search</string>
    <string name="online_status"><u>Online Status</u></string>
    <string name="generic_icons"><u>Generic Icons</u></string>
    <string name="chat_icons"><u>Chat Icons</u></string>
    <string name="how_to">How To</string>
</resources>
