<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLinear"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUserName"
        android:text="@string/username" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginBottom="10dp"
        android:id="@+id/cbRememberMe"
        android:buttonTint="@color/light_brown"
        android:checked="false" />

    <Button
        android:id="@+id/bLogin"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@color/light_brown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logIn" />

</LinearLayout>
